<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackground"
    tools:context=".Activities.SettingActivity">

    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_header" />

    <TextView
        android:id="@+id/txt_choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/img_header"
        android:layout_marginRight="16dp"
        android:text="@string/chooseLanguage" />

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_choose_language"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/english" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:checked="true"
            android:text="@string/farsi" />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_choose_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txt_choose_language"
        android:layout_below="@id/rg_language"
        android:layout_marginTop="32dp"
        android:text="@string/chooseCity" />

    <Spinner
        android:id="@+id/sp_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_choose_city"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txt_choose_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txt_choose_language"
        android:layout_below="@id/sp_cities"
        android:layout_marginTop="32dp"
        android:text="@string/chooseBackGround" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/txt_choose_language"
        android:layout_below="@id/txt_choose_bg"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_border"
        android:gravity="center"
        android:text="@string/camera" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_camera"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@id/btn_camera"
        android:background="@drawable/btn_border"
        android:gravity="center"
        android:text="@string/gallery" />

</RelativeLayout>